examples/kubernetes/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraform-registry
  namespace: terraform-registry
  labels:
    app: terraform-registry
spec:
  type: ClusterIP
  selector:
    app: terraform-registry
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
